fixed z-index and box-sizing

--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,10 @@
   font-weight: bold;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 .position-block-search {
   position: relative;
   margin: 20px 0;
@@ -11,14 +15,12 @@
 
 .icon-search {
   position: absolute;
-  z-index: 1;
 }
 
 .search {
   width: 100%;
   background: #fff;
   border: 1px solid #e1e7ed;
-  box-sizing: border-box;
   box-shadow: 0 1px 8px rgba(61, 78, 97, 0.1);
   border-radius: 4px;
   font-size: 16px;
